<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".GetStartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/welcome"
            android:contentDescription="@string/start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/w_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_light"
            android:text="@string/w_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_yellow"
                android:text="@string/log_in"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_yellow"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                app:cornerRadius="15dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>