<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/light_white"
    android:paddingStart="15dp"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/menu_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/menu_slogan"
        android:fontFamily="@font/home_font"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@id/app_name"
        android:src="@drawable/logo"
        android:foregroundTint="@color/black"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="175dp"
        android:src="@drawable/to_do_list"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/w_tag_line" />

</RelativeLayout>