<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/about_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/icons_group_about"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/aboutUs"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/home_font"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/app_name_version"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/about_detail"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/group_detail"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/light_yellow"
            android:gravity="center"
            android:text="@string/ok_btn"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="15dp" />
    </LinearLayout>
</ScrollView>