<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/signOut_task_ignore"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:paddingEnd="8dp"
                android:src="@drawable/icons8_cancel"
                tools:ignore="RtlSymmetry"
                android:contentDescription="@string/cancel_btn" />


            <ImageView
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:padding="0dp"
                android:src="@drawable/log_out"
                android:contentDescription="@string/logOut" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/home_font"
            android:gravity="center"
            android:text="@string/exit"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/home_font"
            android:gravity="center"
            android:text="@string/logOut"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/NoBtn"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/light_yellow"
                android:gravity="center"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/YesBtn"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>