<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/update_task_ignore"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:paddingEnd="8dp"
                android:src="@drawable/icons8_cancel"
                app:tint="@color/black"
                tools:ignore="RtlSymmetry" />


            <ImageView
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:padding="0dp"
                android:src="@drawable/update_task"
                tools:ignore="ContentDescription" />
        </RelativeLayout>


        <TextView
            android:id="@+id/addTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/home_font"
            android:gravity="center"
            android:text="@string/update_task"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="29sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/home_font"
                android:text="@string/task"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.8">

            <EditText
                android:id="@+id/mEdTeTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="My Task"
                android:fontFamily="@font/muli_light"
                android:hint="@string/enter_task"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/home_font"
                android:text="@string/Description"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.8">

            <EditText
                android:id="@+id/mEdDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="My task"
                android:fontFamily="@font/muli_light"
                android:hint="@string/enter_description"
                android:inputType="text"
                android:textColorHint="#000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delBtn"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/light_yellow"
                android:gravity="center"
                android:text="@string/delete_btn"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_weight="2"
            tools:ignore="ObsoleteLayoutParam">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateBtn"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:text="@string/update_btn"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>